# PayFlow

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3a780e8c4434_initial.py  7c4f9d2a1e10_create_merchants_table.py  9a51b3c22f10_create_tenant_tables.py  b2f6b9d4a8c1_add_webhook_log_table.py  e0d0738a7d36_.py
app/: main.py
app/api/dependencies/: auth.py
app/api/routers/: analytics.py  auth.py  health.py  payments.py  protected.py  webhooks.py
app/core/: config.py  database.py  security.py
app/infrastructure/clickhouse/: client.py
app/infrastructure/db/: models.py  tenant.py  tenant_models.py
app/infrastructure/redis/: limiter.py  rate_limiter.py
app/workers/: celery_app.py  clickhouse_consumer.py  outbox_worker.py  reconciliation_worker.py
docker/: clickhouse_init.sql  init.sql  prometheus.yml
docs/screenshots/: README.md
k8s/: api-deployment.yaml  api-ingress.yaml  api-service.yaml  celery-beat-deployment.yaml  celery-worker-deployment.yaml  configmap.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  secret.yaml
scripts/: manual_checklist_run.py  verify_jwt_sub.py
tests/: conftest.py
tests/integration/: test_analytics_pipeline.py  test_auth.py  test_payments_outbox.py  test_webhooks.py  test_yukassa_webhooks.py
tests/unit/: test_analytics_router_unit.py  test_analytics_unit.py  test_auth_dependencies_unit.py  test_auth_router_unit.py  test_clickhouse_client.py  test_clickhouse_consumer_unit.py  test_health.py  test_outbox_worker_unit.py  test_payments_router_unit.py  test_payments_unit.py  test_rate_limiter_unit.py  test_reconciliation_worker_unit.py  test_security_extra.py  test_tenant_session_unit.py  test_tenant_unit.py  test_webhooks_mock_status_unit.py  test_webhooks_receive_unit.py  test_webhooks_unit.py
